# HelloQt

./: .gitignore  .swp  CMakeLists.txt  main.cpp
resources/: resources.qrc
